chore: RuleEnrollment, RuleEvent as record